add angular material

--- a/apps/default-e2e/project.json
+++ b/apps/default-e2e/project.json
@@ -17,12 +17,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/default-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/default-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["default"]
+  "implicitDependencies": [
+    "default"
+  ]
 }
