--- a/apps/default/project.json
+++ b/apps/default/project.json
@@ -6,7 +6,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/default",
         "index": "apps/default/src/index.html",
@@ -14,8 +16,14 @@
         "polyfills": "apps/default/src/polyfills.ts",
         "tsConfig": "apps/default/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/default/src/favicon.ico", "apps/default/src/assets"],
-        "styles": ["apps/default/src/styles.scss"],
+        "assets": [
+          "apps/default/src/favicon.ico",
+          "apps/default/src/assets"
+        ],
+        "styles": [
+          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/default/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -80,7 +88,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/default"],
+      "outputs": [
+        "coverage/apps/default"
+      ],
       "options": {
         "jestConfig": "apps/default/jest.config.js",
         "passWithNoTests": true
